@@ -15,6 +15,8 @@
    prevent after locate resource starvation.
  * Added object size to object table in DSS. Same field is added to deprecated
    objects.
+ * adding creation_time to extent table into DSS. This ctime is inherited from
+   the corresponding existing copy creation_time.
 
 ## 3.1.0
  * limited number of write per grouping: the new "fifo_max_write_per_grouping"
